# event-analytics-api

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.zh-CN.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_brin_events.py
app/: __init__.py  config.py  deps.py  main.py
app/api/v1/: __init__.py  admin.py  auth.py  events.py  health.py  metrics.py
app/core/: exceptions.py  logging.py  middleware.py  rate_limit.py  rbac.py  security.py
app/db/: __init__.py  redis.py  session.py
app/db/models/: __init__.py  event.py  idempotency.py  metric.py  user.py
app/mq/: streams.py
app/observability/: __init__.py  metrics.py
app/schemas/: auth.py  common.py  event.py  metric.py
app/services/: auth_service.py  event_service.py  metrics_service.py  user_service.py
app/workers/: __init__.py  settings.py  tasks.py
docs/: architecture.md  performance-report.md  resume-talk-track.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: event-analytics.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
scripts/: __init__.py  analyze_slow_queries.sql  ensure_stream.py  entrypoint.sh  generate_load_data.py  init-db.sql  seed.py  worker-entrypoint.sh  write_perf_report.py
tests/integration/: test_api_flow.py  test_health.py
tests/load/: locustfile.py
tests/unit/: test_event_schema.py  test_middleware_ratelimit.py  test_security_rbac.py
